# 21sh_v0

./: .gitignore  .rl_history  CMakeLists.txt  Makefile  README.md  author  bugs.txt  checklist.txt  libft  release.txt
includes/: ft_lex.h  ft_rl.h  ftsh.h  lexer.h  rl_hist.h  sh_alias.h  sh_bin.h  sh_builtin.h  sh_exec.h  sh_expan.h  sh_glob.h  sh_gram_type.h  sh_grammar.h  sh_jctype.h  sh_jobc.h  sh_lex.h  sh_parser.h  sh_prompt.h  sh_sh.h  sh_term.h  sh_utils.h  sh_var.h
libft/: Makefile
libft/includes/: ft_arr.h  ft_bit.h  ft_btree.h  ft_cell.h  ft_char.h  ft_conv.h  ft_dastr.h  ft_dirent.h  ft_dstr.h  ft_err.h  ft_fio.h  ft_hash.h  ft_hset.h  ft_htab.h  ft_logger.h  ft_lst.h  ft_math.h  ft_mem.h  ft_point.h  ft_print.h  ft_str.h  ft_table.h  ft_term.h  ft_vector.h  get_next_line.h  libft.h  libftprintf.h
libft/src/arr/: ft_arr_foreachij.c  ft_arr_free.c  ft_arr_iter.c  ft_arr_len.c  ft_arr_new.c  ft_arr_print.c  ft_arr_strdup.c
libft/src/btree/: ft_btree_app.c  ft_btree_basics.c  ft_btree_manip.c  ft_btree_traverse.c
libft/src/cell/: ft_cell.c
libft/src/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c  ft_wchar_len.c
libft/src/conv/: ft_atoi.c  ft_itoa.c  ft_itoa_base.c
libft/src/dastr/: ft_dastr_basic.c  ft_dastr_del.c  ft_dastr_extend.c  ft_dastr_get.c  ft_dastr_insert.c  ft_dastr_print.c  ft_dastr_replace.c
libft/src/dirent/: ft_dirent.c
libft/src/dstr/: ft_dstr_basic.c  ft_dstr_del.c  ft_dstr_extend.c  ft_dstr_get.c  ft_dstr_insert.c  ft_dstr_join.c  ft_dstr_replace.c
libft/src/fio/: ft_dir.c  ft_dup.c  ft_read.c  ft_stat.c
libft/src/gnl/: get_next_line.c
libft/src/hash/: ft_hcode_str.c
libft/src/hset/: ft_hset_basics.c  ft_hset_manip.c
libft/src/htab/: ft_htab_basics.c  ft_htab_hash_str.c  ft_htab_manip.c
libft/src/logger/: ft_logger.c  ft_logger_update.c
libft/src/lst/: ft_lst_addlast.c  ft_lst_free.c  ft_lst_getby_content.c  ft_lst_getby_csize.c  ft_lst_getby_i.c  ft_lst_putone.c  ft_lst_putone_nl.c  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstiter_option.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c
libft/src/math/: ft_pgcd.c  ft_pow.c  ft_sqrt.c  ft_swap.c
libft/src/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/src/print/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr_fd.c  ft_putnwstr_fd.c  (+6 more)
sh_workflow/execs/: home.c
src/alias/: sh_als.c  sh_als_print.c
src/builtin/: sh_blt_alias.c  sh_blt_cd.c  sh_blt_echo.c  sh_blt_env.c  sh_blt_exit.c  sh_blt_history.c
src/exec/: sh_e.c  sh_e_check.c  sh_e_pipe.c  sh_e_pipe_kwait.c  sh_e_redirect.c  sh_e_redirect_agg.c  sh_e_run.c  sh_e_simp_cmd.c  sh_e_utils.c
src/expan/: sh_xp.c  sh_xp_brace.c  sh_xp_glob.c  sh_xp_param.c  sh_xp_q.c  sh_xp_scmd.c  sh_xp_split.c  sh_xp_tilde.c
src/ftsh/: ftsh.c  ftsh_inter.c
src/glob/: sh_glob.c  sh_glob_match.c  sh_glob_scandir.c
src/grammar/: sh_g_and_or.c  sh_g_cmd.c  sh_g_cmd_core.c  sh_g_cmd_core2.c  sh_g_com_cmd.c  sh_g_com_cmd2.c  sh_g_for.c  sh_g_group.c  sh_g_loop.c  sh_g_pipe.c  sh_g_redir.c  sh_g_simp_cmd.c  sh_g_simp_cmd2.c  sh_g_subsh.c  sh_g_utils.c
src/jobc/: sh_jc.c  sh_jc_cont.c  sh_jc_notify.c  sh_jc_print.c  sh_jc_process.c  sh_jc_put.c  sh_jc_state.c  sh_jobc_launch.c
src/lex/: lex_test  lex_test.c  lex_token_start_arith.c  lex_token_start_closure.c  lex_token_start_enao.c  lex_token_start_gl.c  lex_token_start_ponct.c  lex_token_start_quote.c  lex_tokenizer.c  sh_lex.c  sh_lex_classify.c  sh_lex_manip.c  sh_lex_print.c  sh_lex_seek.c  sh_lex_seek_add.c  sh_lex_seek_als.c  sh_lex_seek_brace.c  sh_lex_seek_bs.c  sh_lex_seek_ctx.c  sh_lex_seek_hash.c  sh_lex_seek_hd.c  sh_lex_seek_ion.c  sh_lex_seek_op.c  sh_lex_seek_op_gl.c  sh_lex_seek_pcb.c  sh_lex_seek_q.c  sh_lex_seek_rw.c  sh_lex_seek_s.c  sh_lex_seek_ssh.c  sh_lex_seek_start.c  sh_lex_skip.c  sh_lex_tok.c  sh_lex_utils.c
src/parser/: sh_p_and_or.c  sh_p_cmd.c  sh_p_cmd_pref.c  sh_p_cmd_suff.c  sh_p_comp_list.c  sh_p_complete_cmd.c  sh_p_distinct.c  sh_p_for.c  sh_p_group.c  sh_p_ifelse.c  sh_p_io.c  sh_p_lbreak.c  sh_p_list.c  sh_p_loop.c  sh_p_pipe.c  sh_p_program.c  sh_p_redir_list.c  sh_p_sep.c  sh_p_simp_cmd.c  sh_p_start.c  sh_p_subsh.c  sh_p_term.c  sh_p_utils.c
src/prompt/: prompt.c
src/readline/: rl.c  rl_autoc.c  rl_autoc_match.c  rl_autoc_menu.c  rl_autoc_menu_put.c  rl_autoc_utils.c  rl_autoc_xmenu.c  rl_autoc_xmenu_move.c  rl_ctrl.c  rl_ctrl_jump.c  rl_ctrl_kill.c  rl_ctrl_kill_w.c  rl_ctrl_move.c  rl_ctrl_paste.c  rl_ctrl_reg.c  rl_ctrl_save.c  rl_ctrl_sig.c  rl_cur.c  rl_edit.c  rl_edit_utils.c  rl_edit_v0.c  rl_edit_v1.c  rl_edit_v2.c  rl_hist.c  rl_hist_io.c  rl_hist_manip.c  rl_hist_request.c  rl_put.c  rl_read.c  rl_scope.c  rl_scope_prompt.c  rl_scope_prompt_ps.c  rl_scope_scan.c  rl_scope_scan_h.c  rl_scope_scan_op.c  rl_scope_scan_q.c  rl_scope_scan_s.c  rl_scope_scan_ssh.c  rl_sig.c  rl_update.c  (+1 more)
src/sh/: sh_sh.c
src/term/: term_config.c
src/utils/: utils_str.c
src/var/: sh_env.c  sh_var.c  sh_var_get.c  sh_var_manip.c  sh_var_utils.c
tests/: test_keymapper.c
tests/exec/: show_args.c  show_env.c
tests/fildes/: dup_mechanism  dup_mechanism.c  filedup
tests/jobs/: print_arg_loop.sh  print_arg_user.sh
tests/lineed/: cat_log.sh
tests/parser/: invalid_000  invalid_001  invalid_003  invalid_004  invalid_005  invalid_006  invalid_007  invalid_008  invalid_009  invalid_010  invalid_011  run.sh  valid_000  valid_001  valid_002  valid_002_a  valid_002_b  valid_003  valid_004  valid_005  valid_006  valid_007  valid_008  valid_009  valid_010  valid_011
tests/redir/: redir_001.sh
tests/script/: script_001  script_003
tests/unit_test/: test_lex.c
tests/wordexp/: wordexp_000.sh  wordexp_001.sh  wordexp_002.sh  wordexp_003.sh  wordexp_004.sh  wordexp_005.sh
todo/: data.txt  lexer.txt  shell_grammar.bnf  test_lexer_single_line.txt
(+58 files in other folders)
