cmake_minimum_required(VERSION 3.13)
project(ftsh)

set(CMAKE_CXX_STANDARD 14)

include_directories(includes)
include_directories(libft/includes)

add_executable(ftsh
        includes/ft_rl.h
        includes/ftsh.h
        includes/sh_glob.h
        includes/sh_lex.h
        includes/sh_prompt.h
        includes/sh_term.h
        includes/sh_utils.h
        libft/includes/ft_arr.h
        libft/includes/ft_bit.h
        libft/includes/ft_char.h
        libft/includes/ft_conv.h
        libft/includes/ft_dastr.h
        libft/includes/ft_dstr.h
        libft/includes/ft_logger.h
        libft/includes/ft_lst.h
        libft/includes/ft_math.h
        libft/includes/ft_mem.h
        libft/includes/ft_print.h
        libft/includes/ft_str.h
        libft/includes/ft_term.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/src/arr/ft_arr_foreachij.c
        libft/src/arr/ft_arr_free.c
        libft/src/arr/ft_arr_iter.c
        libft/src/arr/ft_arr_len.c
        libft/src/arr/ft_arr_new.c
        libft/src/arr/ft_arr_print.c
        libft/src/arr/ft_arr_strdup.c
        libft/src/char/ft_isalnum.c
        libft/src/char/ft_isalpha.c
        libft/src/char/ft_isascii.c
        libft/src/char/ft_isblank.c
        libft/src/char/ft_iscntrl.c
        libft/src/char/ft_isdigit.c
        libft/src/char/ft_islower.c
        libft/src/char/ft_isprint.c
        libft/src/char/ft_isspace.c
        libft/src/char/ft_isupper.c
        libft/src/char/ft_tolower.c
        libft/src/char/ft_toupper.c
        libft/src/char/ft_wchar_len.c
        libft/src/conv/ft_atoi.c
        libft/src/conv/ft_itoa.c
        libft/src/conv/ft_itoa_base.c
        libft/src/dastr/ft_dastr_basic.c
        libft/src/dastr/ft_dastr_del.c
        libft/src/dastr/ft_dastr_extend.c
        libft/src/dastr/ft_dastr_get.c
        libft/src/dastr/ft_dastr_insert.c
        libft/src/dstr/ft_dstr_basic.c
        libft/src/dstr/ft_dstr_del.c
        libft/src/dstr/ft_dstr_extend.c
        libft/src/dstr/ft_dstr_get.c
        libft/src/dstr/ft_dstr_insert.c
        libft/src/dstr/ft_dstr_replace.c
        libft/src/gnl/get_next_line.c
        libft/src/logger/ft_logger.c
        libft/src/logger/ft_logger_print.c
        libft/src/logger/ft_logger_update.c
        libft/src/logger/test_log.c
        libft/src/lst/ft_lst_addlast.c
        libft/src/lst/ft_lst_free.c
        libft/src/lst/ft_lst_getby_content.c
        libft/src/lst/ft_lst_getby_csize.c
        libft/src/lst/ft_lst_getby_i.c
        libft/src/lst/ft_lst_putone.c
        libft/src/lst/ft_lst_putone_nl.c
        libft/src/lst/ft_lstadd.c
        libft/src/lst/ft_lstappend.c
        libft/src/lst/ft_lstdel.c
        libft/src/lst/ft_lstdelone.c
        libft/src/lst/ft_lstiter.c
        libft/src/lst/ft_lstiter_option.c
        libft/src/lst/ft_lstlen.c
        libft/src/lst/ft_lstmap.c
        libft/src/lst/ft_lstnew.c
        libft/src/math/ft_pgcd.c
        libft/src/math/ft_pow.c
        libft/src/math/ft_sqrt.c
        libft/src/math/ft_swap.c
        libft/src/mem/ft_bzero.c
        libft/src/mem/ft_memalloc.c
        libft/src/mem/ft_memccpy.c
        libft/src/mem/ft_memchr.c
        libft/src/mem/ft_memcmp.c
        libft/src/mem/ft_memcpy.c
        libft/src/mem/ft_memdel.c
        libft/src/mem/ft_memmove.c
        libft/src/mem/ft_memset.c
        libft/src/print/ft_putchar.c
        libft/src/print/ft_putchar_fd.c
        libft/src/print/ft_putendl.c
        libft/src/print/ft_putendl_fd.c
        libft/src/print/ft_putnbr.c
        libft/src/print/ft_putnbr_fd.c
        libft/src/print/ft_putnstr_fd.c
        libft/src/print/ft_putnwstr_fd.c
        libft/src/print/ft_putstr.c
        libft/src/print/ft_putstr_fd.c
        libft/src/print/ft_putuint_base_fd.c
        libft/src/print/ft_putwchar.c
        libft/src/print/ft_putwchar_fd.c
        libft/src/print/ft_putwstr_fd.c
        libft/src/printf/ft_printf.c
        libft/src/printf/pf_badconv.c
        libft/src/printf/pf_c.c
        libft/src/printf/pf_double.c
        libft/src/printf/pf_init.c
        libft/src/printf/pf_int.c
        libft/src/printf/pf_oxu.c
        libft/src/printf/pf_p.c
        libft/src/printf/pf_percent.c
        libft/src/printf/pf_s.c
        libft/src/printf/processing.c
        libft/src/printf/token.c
        libft/src/printf/utils.c
        libft/src/str/ft_count_sep_words.c
        libft/src/str/ft_strcat.c
        libft/src/str/ft_strchr.c
        libft/src/str/ft_strclr.c
        libft/src/str/ft_strcmp.c
        libft/src/str/ft_strconnect.c
        libft/src/str/ft_strcontains.c
        libft/src/str/ft_strcontains_all.c
        libft/src/str/ft_strcpy.c
        libft/src/str/ft_strdel.c
        libft/src/str/ft_strdup.c
        libft/src/str/ft_strequ.c
        libft/src/str/ft_striter.c
        libft/src/str/ft_striteri.c
        libft/src/str/ft_strjoin.c
        libft/src/str/ft_strlcat.c
        libft/src/str/ft_strlen.c
        libft/src/str/ft_strlenz.c
        libft/src/str/ft_strmap.c
        libft/src/str/ft_strmapi.c
        libft/src/str/ft_strncat.c
        libft/src/str/ft_strncmp.c
        libft/src/str/ft_strncpy.c
        libft/src/str/ft_strndup.c
        libft/src/str/ft_strndup_i.c
        libft/src/str/ft_strnequ.c
        libft/src/str/ft_strnew.c
        libft/src/str/ft_strnstr.c
        libft/src/str/ft_strrchr.c
        libft/src/str/ft_strrev.c
        libft/src/str/ft_strsplit.c
        libft/src/str/ft_strstr.c
        libft/src/str/ft_strsub.c
        libft/src/str/ft_strtrim.c
        libft/src/str/ft_wstrlenz.c
        libft/Makefile
        src/ftsh/ftsh.c
        src/glob/sh_glob.c
        src/glob/sh_glob_match.c
        src/glob/sh_glob_scandir.c
        src/lex/lex_test.c
        src/lex/lex_token_start_arith.c
        src/lex/lex_token_start_closure.c
        src/lex/lex_token_start_enao.c
        src/lex/lex_token_start_gl.c
        src/lex/lex_token_start_ponct.c
        src/lex/lex_token_start_quote.c
        src/lex/lex_tokenizer.c
        src/prompt/prompt.c
        src/readline/rl.c
        src/readline/rl_autoc.c
        src/readline/rl_autoc_match.c
        src/readline/rl_autoc_menu.c
        src/readline/rl_autoc_utils.c
        src/readline/rl_autoc_xmenu.c
        src/readline/rl_autoc_xmenu_move.c
        src/readline/rl_ctrl.c
        src/readline/rl_ctrl_jump.c
        src/readline/rl_ctrl_kill.c
        src/readline/rl_ctrl_kill_w.c
        src/readline/rl_ctrl_move.c
        src/readline/rl_ctrl_paste.c
        src/readline/rl_ctrl_reg.c
        src/readline/rl_ctrl_save.c
        src/readline/rl_cur.c
        src/readline/rl_edit.c
        src/readline/rl_edit_utils.c
        src/readline/rl_edit_v0.c
        src/readline/rl_edit_v1.c
        src/readline/rl_edit_v2.c
        src/readline/rl_put.c
        src/readline/rl_scope.c
        src/readline/rl_scope_scan.c
        src/readline/rl_scope_scan_q.c
        src/readline/rl_scope_scan_s.c
        src/readline/rl_utils.c
        src/term/term_config.c
        src/utils/utils_str.c
        tests/test_keymapper.c
        tests/test_lex.c
        Makefile libft/src/dstr/ft_dstr_join.c
        src/readline/rl_hist.c
        includes/rl_hist.h
        src/readline/rl_hist_io.c
        src/readline/rl_hist_request.c
        libft/src/dastr/ft_dastr_print.c
        includes/sh_var.h
        libft/includes/ft_table.h
        libft/src/table/ft_table_basic.c libft/src/table/ft_tab_insert.c libft/src/table/ft_tab_get.c
        libft/src/table/ft_tab_del.c libft/src/table/ft_tab_put.c libft/src/dastr/ft_dastr_replace.c
        src/var/sh_var.c libft/src/table/ft_tab_to.c
        src/var/sh_var_utils.c libft/includes/ft_hasht.h src/readline/rl_scope_scan_h.c src/lex/sh_lex.c src/lex/sh_lex_tok.c src/lex/sh_lex_manip.c src/lex/sh_lex_seek.c src/lex/sh_lex_seek_q.c src/lex/sh_lex_seek_bs.c src/lex/sh_lex_seek_add.c src/lex/sh_lex_seek_op.c src/lex/sh_lex_seek_op_gl.c src/lex/sh_lex_print.c libft/src/dastr/ft_dastr_put.c includes/sh_alias.h src/alias/sh_als.c)
