cmake_minimum_required(VERSION 3.13)
project(21sh_gh)

set(CMAKE_CXX_STANDARD 14)

include_directories(includes)
include_directories(libft/includes)

add_executable(21sh_gh
        includes/ft_rl.h
        includes/ftsh.h
        includes/rl_hist.h
        includes/sh_alias.h
        includes/sh_bin.h
        includes/sh_exec.h
        includes/sh_glob.h
        includes/sh_grammar.h
        includes/sh_jobc.h
        includes/sh_lex.h
        includes/sh_parser.h
        includes/sh_prompt.h
        includes/sh_sh.h
        includes/sh_term.h
        includes/sh_utils.h
        includes/sh_var.h
        libft/includes/ft_arr.h
        libft/includes/ft_bit.h
        libft/includes/ft_btree.h
        libft/includes/ft_cell.h
        libft/includes/ft_char.h
        libft/includes/ft_conv.h
        libft/includes/ft_dastr.h
        libft/includes/ft_dirent.h
        libft/includes/ft_dstr.h
        libft/includes/ft_err.h
        libft/includes/ft_fio.h
        libft/includes/ft_hash.h
        libft/includes/ft_hset.h
        libft/includes/ft_htab.h
        libft/includes/ft_logger.h
        libft/includes/ft_lst.h
        libft/includes/ft_math.h
        libft/includes/ft_mem.h
        libft/includes/ft_point.h
        libft/includes/ft_print.h
        libft/includes/ft_str.h
        libft/includes/ft_table.h
        libft/includes/ft_term.h
        libft/includes/ft_vector.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/src/arr/ft_arr_foreachij.c
        libft/src/arr/ft_arr_free.c
        libft/src/arr/ft_arr_iter.c
        libft/src/arr/ft_arr_len.c
        libft/src/arr/ft_arr_new.c
        libft/src/arr/ft_arr_print.c
        libft/src/arr/ft_arr_strdup.c
        libft/src/btree/ft_btree_app.c
        libft/src/btree/ft_btree_basics.c
        libft/src/btree/ft_btree_manip.c
        libft/src/btree/ft_btree_traverse.c
        libft/src/cell/ft_cell.c
        libft/src/char/ft_isalnum.c
        libft/src/char/ft_isalpha.c
        libft/src/char/ft_isascii.c
        libft/src/char/ft_isblank.c
        libft/src/char/ft_iscntrl.c
        libft/src/char/ft_isdigit.c
        libft/src/char/ft_islower.c
        libft/src/char/ft_isprint.c
        libft/src/char/ft_isspace.c
        libft/src/char/ft_isupper.c
        libft/src/char/ft_tolower.c
        libft/src/char/ft_toupper.c
        libft/src/char/ft_wchar_len.c
        libft/src/conv/ft_atoi.c
        libft/src/conv/ft_itoa.c
        libft/src/conv/ft_itoa_base.c
        libft/src/dastr/ft_dastr_basic.c
        libft/src/dastr/ft_dastr_del.c
        libft/src/dastr/ft_dastr_extend.c
        libft/src/dastr/ft_dastr_get.c
        libft/src/dastr/ft_dastr_insert.c
        libft/src/dastr/ft_dastr_print.c
        libft/src/dastr/ft_dastr_replace.c
        libft/src/dirent/ft_dirent.c
        libft/src/dstr/ft_dstr_basic.c
        libft/src/dstr/ft_dstr_del.c
        libft/src/dstr/ft_dstr_extend.c
        libft/src/dstr/ft_dstr_get.c
        libft/src/dstr/ft_dstr_insert.c
        libft/src/dstr/ft_dstr_join.c
        libft/src/dstr/ft_dstr_replace.c
        libft/src/fio/ft_dup.c
        libft/src/gnl/get_next_line.c
        libft/src/hash/ft_hcode_str.c
        libft/src/hset/ft_hset_basics.c
        libft/src/hset/ft_hset_manip.c
        libft/src/htab/ft_htab_basics.c
        libft/src/htab/ft_htab_hash_str.c
        libft/src/htab/ft_htab_manip.c
        libft/src/logger/ft_logger.c
        libft/src/logger/ft_logger_update.c
        libft/src/lst/ft_lst_addlast.c
        libft/src/lst/ft_lst_free.c
        libft/src/lst/ft_lst_getby_content.c
        libft/src/lst/ft_lst_getby_csize.c
        libft/src/lst/ft_lst_getby_i.c
        libft/src/lst/ft_lst_putone.c
        libft/src/lst/ft_lst_putone_nl.c
        libft/src/lst/ft_lstadd.c
        libft/src/lst/ft_lstappend.c
        libft/src/lst/ft_lstdel.c
        libft/src/lst/ft_lstdelone.c
        libft/src/lst/ft_lstiter.c
        libft/src/lst/ft_lstiter_option.c
        libft/src/lst/ft_lstlen.c
        libft/src/lst/ft_lstmap.c
        libft/src/lst/ft_lstnew.c
        libft/src/math/ft_pgcd.c
        libft/src/math/ft_pow.c
        libft/src/math/ft_sqrt.c
        libft/src/math/ft_swap.c
        libft/src/mem/ft_bzero.c
        libft/src/mem/ft_memalloc.c
        libft/src/mem/ft_memccpy.c
        libft/src/mem/ft_memchr.c
        libft/src/mem/ft_memcmp.c
        libft/src/mem/ft_memcpy.c
        libft/src/mem/ft_memdel.c
        libft/src/mem/ft_memmove.c
        libft/src/mem/ft_memset.c
        libft/src/print/ft_putchar.c
        libft/src/print/ft_putchar_fd.c
        libft/src/print/ft_putendl.c
        libft/src/print/ft_putendl_fd.c
        libft/src/print/ft_putnbr.c
        libft/src/print/ft_putnbr_fd.c
        libft/src/print/ft_putnstr_fd.c
        libft/src/print/ft_putnwstr_fd.c
        libft/src/print/ft_putstr.c
        libft/src/print/ft_putstr_fd.c
        libft/src/print/ft_putuint_base_fd.c
        libft/src/print/ft_putwchar.c
        libft/src/print/ft_putwchar_fd.c
        libft/src/print/ft_putwstr_fd.c
        libft/src/printf/ft_printf.c
        libft/src/printf/pf_badconv.c
        libft/src/printf/pf_c.c
        libft/src/printf/pf_double.c
        libft/src/printf/pf_init.c
        libft/src/printf/pf_int.c
        libft/src/printf/pf_oxu.c
        libft/src/printf/pf_p.c
        libft/src/printf/pf_percent.c
        libft/src/printf/pf_s.c
        libft/src/printf/processing.c
        libft/src/printf/token.c
        libft/src/printf/utils.c
        libft/src/str/ft_count_sep_words.c
        libft/src/str/ft_strcat.c
        libft/src/str/ft_strchr.c
        libft/src/str/ft_strclr.c
        libft/src/str/ft_strcmp.c
        libft/src/str/ft_strconnect.c
        libft/src/str/ft_strcontains.c
        libft/src/str/ft_strcontains_all.c
        libft/src/str/ft_strcpy.c
        libft/src/str/ft_strdel.c
        libft/src/str/ft_strdup.c
        libft/src/str/ft_strequ.c
        libft/src/str/ft_striter.c
        libft/src/str/ft_striteri.c
        libft/src/str/ft_strjoin.c
        libft/src/str/ft_strlcat.c
        libft/src/str/ft_strlen.c
        libft/src/str/ft_strlenz.c
        libft/src/str/ft_strmap.c
        libft/src/str/ft_strmapi.c
        libft/src/str/ft_strncat.c
        libft/src/str/ft_strncmp.c
        libft/src/str/ft_strncpy.c
        libft/src/str/ft_strndup.c
        libft/src/str/ft_strndup_i.c
        libft/src/str/ft_strnequ.c
        libft/src/str/ft_strnew.c
        libft/src/str/ft_strnstr.c
        libft/src/str/ft_strrchr.c
        libft/src/str/ft_strrev.c
        libft/src/str/ft_strsplit.c
        libft/src/str/ft_strstr.c
        libft/src/str/ft_strsub.c
        libft/src/str/ft_strtrim.c
        libft/src/str/ft_wstrlenz.c
        libft/src/table/ft_tab_basic.c
        libft/src/table/ft_tab_del.c
        libft/src/table/ft_tab_get.c
        libft/src/table/ft_tab_insert.c
        libft/src/table/ft_tab_iter.c
        libft/src/table/ft_tab_put.c
        libft/src/table/ft_tab_to.c
        libft/src/vector/ft_vec_basics.c
        libft/src/vector/ft_vec_delete.c
        libft/src/vector/ft_vec_insert.c
        libft/test/ft_btree_test.c
        libft/test/ft_hset_test.c
        libft/test/ft_htab_test.c
        libft/Makefile
        src/alias/sh_als.c
        src/bin/sh_bin.c
        src/bin/sh_bin_manip.c
        src/exec/sh_e.c
        src/ftsh/ftsh.c
        src/glob/sh_glob.c
        src/glob/sh_glob_match.c
        src/glob/sh_glob_scandir.c
        src/grammar/sh_g_and_or.c
        src/grammar/sh_g_cmd.c
        src/grammar/sh_g_cmd_core.c
        src/grammar/sh_g_com_cmd.c
        src/grammar/sh_g_for.c
        src/grammar/sh_g_group.c
        src/grammar/sh_g_loop.c
        src/grammar/sh_g_pipe.c
        src/grammar/sh_g_redir.c
        src/grammar/sh_g_simp_cmd.c
        src/grammar/sh_g_utils.c
        src/jobc/sh_jobc_launch.c
        src/lex/sh_lex.c
        src/lex/sh_lex_classify.c
        src/lex/sh_lex_manip.c
        src/lex/sh_lex_print.c
        src/lex/sh_lex_seek.c
        src/lex/sh_lex_seek_add.c
        src/lex/sh_lex_seek_als.c
        src/lex/sh_lex_seek_bs.c
        src/lex/sh_lex_seek_ctx.c
        src/lex/sh_lex_seek_hash.c
        src/lex/sh_lex_seek_hd.c
        src/lex/sh_lex_seek_ion.c
        src/lex/sh_lex_seek_op.c
        src/lex/sh_lex_seek_op_gl.c
        src/lex/sh_lex_seek_pcb.c
        src/lex/sh_lex_seek_q.c
        src/lex/sh_lex_seek_rw.c
        src/lex/sh_lex_seek_s.c
        src/lex/sh_lex_seek_ssh.c
        src/lex/sh_lex_seek_start.c
        src/lex/sh_lex_tok.c
        src/lex/sh_lex_utils.c
        src/parser/sh_p_and_or.c
        src/parser/sh_p_cmd.c
        src/parser/sh_p_cmd_pref.c
        src/parser/sh_p_cmd_suff.c
        src/parser/sh_p_comp_list.c
        src/parser/sh_p_complete_cmd.c
        src/parser/sh_p_distinct.c
        src/parser/sh_p_for.c
        src/parser/sh_p_group.c
        src/parser/sh_p_ifelse.c
        src/parser/sh_p_io.c
        src/parser/sh_p_lbreak.c
        src/parser/sh_p_list.c
        src/parser/sh_p_loop.c
        src/parser/sh_p_pipe.c
        src/parser/sh_p_program.c
        src/parser/sh_p_redir_list.c
        src/parser/sh_p_sep.c
        src/parser/sh_p_simp_cmd.c
        src/parser/sh_p_start.c
        src/parser/sh_p_subsh.c
        src/parser/sh_p_term.c
        src/parser/sh_p_utils.c
        src/prompt/prompt.c
        src/readline/rl.c
        src/readline/rl_autoc.c
        src/readline/rl_autoc_match.c
        src/readline/rl_autoc_menu.c
        src/readline/rl_autoc_utils.c
        src/readline/rl_autoc_xmenu.c
        src/readline/rl_autoc_xmenu_move.c
        src/readline/rl_ctrl.c
        src/readline/rl_ctrl_jump.c
        src/readline/rl_ctrl_kill.c
        src/readline/rl_ctrl_kill_w.c
        src/readline/rl_ctrl_move.c
        src/readline/rl_ctrl_paste.c
        src/readline/rl_ctrl_reg.c
        src/readline/rl_ctrl_save.c
        src/readline/rl_cur.c
        src/readline/rl_edit.c
        src/readline/rl_edit_utils.c
        src/readline/rl_edit_v0.c
        src/readline/rl_edit_v1.c
        src/readline/rl_edit_v2.c
        src/readline/rl_hist.c
        src/readline/rl_hist_io.c
        src/readline/rl_hist_request.c
        src/readline/rl_put.c
        src/readline/rl_scope.c
        src/readline/rl_scope_prompt.c
        src/readline/rl_scope_prompt_ps.c
        src/readline/rl_scope_scan.c
        src/readline/rl_scope_scan_h.c
        src/readline/rl_scope_scan_op.c
        src/readline/rl_scope_scan_q.c
        src/readline/rl_scope_scan_s.c
        src/readline/rl_scope_scan_ssh.c
        src/readline/rl_utils.c
        src/term/term_config.c
        src/utils/utils_str.c
        src/var/sh_var.c
        src/var/sh_var_get.c
        src/var/sh_var_utils.c
        Makefile src/jobc/sh_jc.c src/sh/sh_sh.c src/jobc/sh_jc_state.c src/jobc/sh_jc_put.c includes/sh_jctype.h src/jobc/sh_jc_notify.c src/jobc/sh_jc_cont.c src/jobc/sh_jc_process.c src/exec/sh_e_simp_cmd.c src/exec/sh_e_pipe.c src/exec/sh_e_utils.c src/exec/sh_e_redirect.c libft/src/fio/ft_stat.c includes/sh_gram_type.h libft/src/fio/ft_read.c src/expan/sh_xp.c includes/sh_expan.h src/lex/sh_lex_seek_brace.c)
